--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+/* estilos generales del proyecto */
+* {
+  box-sizing: border-box;
+}
 :root {
   --white: #ffffff;
   --black: #000000;
@@ -13,10 +17,12 @@ body {
   font-family: 'Quicksand', sans-serif;
 }
 
+/* Se pone el display none para evitar que se muestre lo que no deseamos */
 .inactive {
   display: none;
 }
 
+/* Estilos de la navBar */
 nav {
   display: flex;
   justify-content: space-between;
@@ -62,9 +68,12 @@ nav {
   font-size: var(--sm);
   margin-right: 12px;
   cursor: pointer;
+  user-select: none;
 }
 .navbar-shopping-cart {
   position: relative;
+  user-select: none;
+  cursor: pointer;
 }
 .navbar-shopping-cart div {
   width: 16px;
@@ -81,12 +90,14 @@ nav {
   align-items: center;
 }
 
+/* Estilos de nuestro menu de desktop */
 .desktop-menu {
   position: absolute;
   top: 60px;
   right: 50px;
   background-color: var(--white);
-  width: 100px;
+  width: 150px;
+  min-width: 100px;
   height: auto;
   border: 1px solid var(--very-light-pink);
   border-radius: 6px;
@@ -117,4 +128,156 @@ nav {
   text-decoration: none;
   margin-bottom: 20px;
   display: inline-block;
+}
+
+/* Estilos de nuestro menu de mobile */
+.mobile-menu {
+  background-color: var(--white);
+  position: absolute;
+  top: 60px;
+  left: 0px;
+  padding: 24px;
+}
+.mobile-menu a {
+  text-decoration: none;
+  color: var(--black);
+  font-weight: bold;
+  /* margin-bottom: 24px; */
+}
+.mobile-menu ul {
+  padding: 0;
+  margin: 24px 0 0;
+  list-style: none;
+}
+.mobile-menu ul:nth-child(1) {
+  border-bottom: 1px solid var(--very-light-pink);
+}
+.mobile-menu ul li {
+  margin-bottom: 24px;
+}
+.email {
+  font-size: var(--sm);
+  font-weight: 300 !important;
+}
+.sign-out {
+  font-size: var(--sm);
+  color: var(--hospital-green) !important;
+}
+
+/* Estilos de detalles del carrito */
+.product-detail {
+  background-color: var(--white);
+  width: 360px;
+  padding: 0 24px;
+  box-sizing: border-box;
+  position: absolute;
+  right: 0;
+}
+.title-container {
+  display: flex;
+  cursor: pointer;
+}
+.title-container img {
+  transform: rotate(180deg);
+  margin-right: 14px;
+}
+.title {
+  font-size: var(--lg);
+  font-weight: bold;
+}
+.order {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 16px;
+  align-items: center;
+  background-color: var(--text-input-field);
+  margin-bottom: 24px;
+  border-radius: 8px;
+  padding: 0 24px;
+}
+.order p:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+}
+.order p span:nth-child(1) {
+  font-size: var(--md);
+  font-weight: bold;
+}
+.order p:nth-child(2) {
+  text-align: end;
+  font-weight: bold;
+}
+.shopping-cart {
+  display: grid;
+  grid-template-columns: auto 1fr auto auto;
+  gap: 16px;
+  margin-bottom: 24px;
+  align-items: center;
+}
+.shopping-cart figure {
+  margin: 0;
+}
+.shopping-cart figure img {
+  width: 70px;
+  height: 70px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+.shopping-cart p:nth-child(2) {
+  color: var(--very-light-pink);
+}
+.shopping-cart p:nth-child(3) {
+  font-size: var(--md);
+  font-weight: bold;
+}
+.primary-button {
+  background-color: var(--hospital-green);
+  border-radius: 8px;
+  border: none;
+  color: var(--white);
+  width: 100%;
+  cursor: pointer;
+  font-size: var(--md);
+  font-weight: bold;
+  height: 50px;
+}
+
+/* definición de mediaqueries */
+@media (max-width: 640px) {
+  .menu {
+    display: block;
+  }
+  .navbar-left ul {
+    display: none;
+  }
+  .navbar-email {
+    display: none;
+  }
+  .desktop-menu {
+    display: none;
+  }
+
+  .product-detail {
+    width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .menu {
+    display: block;
+  }
+  .navbar-left ul {
+    display: none;
+  }
+  .navbar-email {
+    display: none;
+  }
+  .desktop-menu {
+    display: none;
+  }
+}
+
+@media (min-width: 769px) {
+  .mobile-menu {
+    display: none;
+  }
 }
