--- a/styles.css
+++ b/styles.css
@@ -134,9 +134,14 @@ nav {
 .mobile-menu {
   background-color: var(--white);
   position: absolute;
-  top: 60px;
-  left: 0px;
-  padding: 24px;
+  top: 61px;
+  left: 5px;
+  padding: 0 24px 24px;
+  border-radius: 20px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 0;
+  border: 0.5px solid var(--very-light-pink);
+  border-top-style: none;
 }
 .mobile-menu a {
   text-decoration: none;
@@ -168,10 +173,15 @@ nav {
 .product-detail {
   background-color: var(--white);
   width: 360px;
-  padding: 0 24px;
+  padding: 0 24px 24px;
   box-sizing: border-box;
   position: absolute;
-  right: 0;
+  right: 5px;
+  border-radius: 20px;
+  border-top-right-radius: 0;
+  border-top-left-radius: 7px;
+  border: 0.5px solid var(--very-light-pink);
+  border-top-style: none;
 }
 .title-container {
   display: flex;
@@ -242,6 +252,49 @@ nav {
   height: 50px;
 }
 
+/* Estilos de la seccion de productos */
+.cards-container {
+  padding: 24px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 240px);
+  gap: 26px;
+  place-content: center;
+}
+.product-card {
+  width: 240px;
+}
+.product-card img {
+  width: 240px;
+  height: 240px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+.product-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 12px;
+}
+.product-info figure {
+  margin: 0;
+}
+.product-info figure img {
+  width: 35px;
+  height: 35px;
+}
+.product-info div p:nth-child(1) {
+  font-weight: bold;
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+.product-info div p:nth-child(2) {
+  font-size: var(--sm);
+  margin-top: 0;
+  margin-bottom: 0;
+  color: var(--very-light-pink);
+}
+
 /* definición de mediaqueries */
 @media (max-width: 640px) {
   .menu {
@@ -259,6 +312,18 @@ nav {
 
   .product-detail {
     width: 100%;
+  }
+
+  .cards-container {
+    grid-template-columns: repeat(auto-fill, 200px);
+    place-items: center;
+  }
+  .product-card {
+    width: 200px;
+  }
+  .product-card img {
+    width: 200px;
+    height: 200px;
   }
 }
 @media (max-width: 768px) {
